Fix heading spacing

--- a/src/styles/partials/_skills.scss
+++ b/src/styles/partials/_skills.scss
@@ -12,7 +12,7 @@
   h1 {
     position: absolute;
     left: auto;
-    top: 3rem;
+    top: 7rem;
     z-index: 1;
     font-size: 4rem;
     font-weight: 800;
